--- a/contact.html
+++ b/contact.html
@@ -42,11 +42,11 @@
       <div class="contact__list">
         <div class="contact__email">
           <i class="fas fa-envelope"></i> Email
-          <div class="text-secondary">meghas.shree95@email.com</div>
+          <div class="text-secondary">meghshree95@email.com</div>
         </div>
         <div class="contact__phone">
           <i class="fas fa-mobile-alt"></i> Phone
-          <div class="text-secondary">8105814547</div>
+          <div class="text-secondary">800004547</div>
         </div>
         <div class="contact__address">
           <i class="fas fa-marker-alt"></i> Address
